# schoolmanagement-Jejelly

./: pyproject.toml
api/: api.py  utils.py
api/endpoint/: student.py
core/: serverManager.py
domain/schoolManagement/school/: IStudentQueries.py  studentSchema.py  studentService.py
infrastructures/database/student/models/: student.py
