[tool.poetry]
name = "schoolmanagement"
version = "0.1.0"
description = "hexagonal arch for a managaement system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
